--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM"]
   },
 
   "references": [
