--- a/package.json
+++ b/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "cryptid-helper",
+  "name": "vite-template-solid",
   "version": "0.0.0",
-  "private": true,
+  "description": "",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "build": "vite build",
+    "serve": "vite preview"
   },
-  "dependencies": {
-    "vue": "^3.2.45"
-  },
+  "license": "MIT",
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.4",
-    "@types/node": "^18.11.12",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.13",
     "bootstrap-icons": "^1.10.3",
-    "clsx": "^1.2.1",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
-    "prettier": "^2.7.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "~4.7.4",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "typescript": "^4.9.4",
+    "vite": "^4.0.3",
+    "vite-plugin-solid": "^2.5.0"
+  },
+  "dependencies": {
+    "solid-js": "^1.6.6"
   }
 }
